Fix horizontal scroll

--- a/src/components/AuthorStihList/AuthorStihList.css
+++ b/src/components/AuthorStihList/AuthorStihList.css
@@ -78,7 +78,7 @@
     position: relative;
     left: 50%;
     margin-left: -50vw;
-    width: 100vw;
+    width: 98vw;
     border-bottom: 10px solid #fafafa;
     margin-bottom: 40px;
 }
